--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
+  // Only build references.
   "files": [],
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
+    { "path": "./src/devvit" },
+    { "path": "./src/client" },
+    { "path": "./src/shared" },
+    { "path": "./src/server" }
   ]
 }
