--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dev:vite": "cd src/client && vite --port 7474",
     "dev:test": "cd src/client && vite --port 7474 --mode test",
     "test:game": "cd src/client && vite --port 7474",
+    "start:local": "cd src/client && vite --port 7474 --host --open",
+    "local": "npm run start:local",
     "login": "devvit login --copy-paste",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
