自适应完成

--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "scripts": {
     "build:client": "cd src/client && vite build",
     "check": "npm run type-check && npm run lint:fix && npm run prettier",
-    "devvit:init": "devvit upload --copy-paste && touch .initialized",
-    "deploy": "npm run build:client && devvit upload --copy-paste",
+    "devvit:init": "npx devvit upload --copy-paste && touch .initialized",
+    "deploy": "npm run build:client && npx devvit upload --copy-paste",
     "dev": "node setup-devvit.cjs",
     "dev:all": "concurrently -p \"[{name}]\" -n \"VITE,DEVVIT,GAME\" -c \"blue,green,magenta\" \"npm run dev:vite\" \"npm run dev:devvit\" \"npm run dev:client\" --restart-tries 2",
     "dev:client": "cd src/client && vite build --watch",
-    "dev:devvit": "devvit playtest catShowerTesting",
+    "dev:devvit": "npx devvit playtest tboubleTesting",
     "dev:vite": "cd src/client && vite --port 7474",
-    "login": "devvit login --copy-paste",
+    "login": "npx devvit login --copy-paste",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "prettier": "prettier-package-json --write ./package.json && prettier --write .",
