--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "devvit-react-starter-experimental",
   "version": "0.1.0",
+  "version": "0.1.0",
   "license": "BSD-3-Clause",
   "type": "module",
   "scripts": {
