--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "private": true,
   "name": "devvit-react-starter-experimental",
   "version": "0.1.0",
-  "version": "0.1.0",
   "license": "BSD-3-Clause",
   "type": "module",
   "scripts": {
     "build:client": "cd src/client && vite build",
     "check": "npm run type-check && npm run lint:fix && npm run prettier",
-    "devvit:init": "npx devvit upload --copy-paste && touch .initialized",
+    "devvit:init": "npx devvit upload --copy-paste && (echo. > .initialized)",
     "deploy": "npm run build:client && npx devvit upload --copy-paste",
     "dev": "node setup-devvit.cjs",
     "dev:all": "concurrently -p \"[{name}]\" -n \"VITE,DEVVIT,GAME\" -c \"blue,green,magenta\" \"npm run dev:vite\" \"npm run dev:devvit\" \"npm run dev:client\" --restart-tries 2",
