--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "node setup-devvit.cjs",
     "dev:all": "concurrently -p \"[{name}]\" -n \"VITE,DEVVIT,GAME\" -c \"blue,green,magenta\" \"npm run dev:vite\" \"npm run dev:devvit\" \"npm run dev:client\" --restart-tries 2",
     "dev:client": "cd src/client && vite build --watch",
-    "dev:devvit": "npx devvit playtest BubbleTroubleGame",
+    "dev:devvit": "npx devvit playtest tboubleTesting",
     "dev:vite": "cd src/client && vite --port 7474",
     "login": "npx devvit login --copy-paste",
     "lint": "eslint ./src",
